// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders correctly 1`] = `
<div>
  <div
    class=
        ms-Slider
        ms-Slider-enabled
        ms-Slider-row
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          user-select: none;
        }
  >
    <label
      class=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            word-wrap: break-word;
          }
      for="Slider0"
    >
      I am a slider
    </label>
    <div
      class=
          ms-Slider-container
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
          }
    >
      <div
        aria-disabled="false"
        aria-label="I am a slider"
        aria-valuemax="10"
        aria-valuemin="0"
        aria-valuenow="0"
        aria-valuetext="0"
        class=
            ms-Slider-slideBox
            ms-Slider-showValue
            ms-Slider-showTransitions
            {
              align-items: center;
              background: transparent;
              border: none;
              display: flex;
              flex-grow: 1;
              height: 28px;
              line-height: 28px;
              outline: transparent;
              padding-bottom: 0;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 0;
              position: relative;
              width: auto;
            }
            &::-moz-focus-inner {
              border: 0;
            }
            .ms-Fabric--isFocusVisible &:focus:after {
              border: 1px solid #ffffff;
              bottom: 1px;
              content: "";
              left: 1px;
              outline: 1px solid #605e5c;
              position: absolute;
              right: 1px;
              top: 1px;
              z-index: 1;
            }
            &:active .ms-Slider-active {
              background-color: #005a9e;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:active .ms-Slider-active {
              background-color: Highlight;
            }
            &:hover .ms-Slider-active {
              background-color: #0078d4;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Slider-active {
              background-color: Highlight;
            }
            &:active .ms-Slider-inactive {
              background-color: #8a8886;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:active .ms-Slider-inactive {
              border-color: Highlight;
            }
            &:hover .ms-Slider-inactive {
              background-color: #8a8886;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Slider-inactive {
              border-color: Highlight;
            }
            &:active .ms-Slider-thumb {
              border: 2px solid #005a9e;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:active .ms-Slider-thumb {
              border-color: Highlight;
            }
            &:hover .ms-Slider-thumb {
              border: 2px solid #005a9e;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Slider-thumb {
              border-color: Highlight;
            }
            &:active .ms-Slider-zeroTick {
              background-color: #deecf9;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:active .ms-Slider-zeroTick {
              background-color: Highlight;
            }
            &:hover .ms-Slider-zeroTick {
              background-color: #deecf9;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Slider-zeroTick {
              background-color: Highlight;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
              forced-color-adjust: none;
            }
        data-is-focusable="true"
        id="Slider0"
        role="slider"
        tabindex="0"
      >
        <div
          class=
              ms-Slider-line
              {
                display: flex;
                position: relative;
                width: 100%;
              }
        >
          <span
            class=
                ms-Slider-thumb
                {
                  background: #ffffff;
                  border-color: #605e5c;
                  border-radius: 10px;
                  border-style: solid;
                  border-width: 2px;
                  box-sizing: border-box;
                  display: block;
                  height: 16px;
                  position: absolute;
                  top: -6px;
                  transform: translateX(-50%);
                  transition: left 0.367s cubic-bezier(.1,.9,.2,1);
                  width: 16px;
                }
            style="left: 0%;"
          />
          <span
            class=
                ms-Slider-inactive
                {
                  border-radius: 4px;
                  box-sizing: border-box;
                  height: 4px;
                  width: 100%;
                }
                {
                  background: #8a8886;
                  transition: width 0.367s cubic-bezier(.1,.9,.2,1);
                }
                @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                  border: 1px solid WindowText;
                }
            style="width: 0%;"
          />
          <span
            class=
                ms-Slider-active
                {
                  border-radius: 4px;
                  box-sizing: border-box;
                  height: 4px;
                  width: 100%;
                }
                {
                  background: #323130;
                  transition: width 0.367s cubic-bezier(.1,.9,.2,1);
                }
                @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                  background-color: WindowText;
                }
            style="width: 0%;"
          />
          <span
            class=
                ms-Slider-inactive
                {
                  border-radius: 4px;
                  box-sizing: border-box;
                  height: 4px;
                  width: 100%;
                }
                {
                  background: #8a8886;
                  transition: width 0.367s cubic-bezier(.1,.9,.2,1);
                }
                @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                  border: 1px solid WindowText;
                }
            style="width: 100%;"
          />
        </div>
      </div>
      <label
        class=
            ms-Label
            ms-Slider-value
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              display: block;
              flex-shrink: 1;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 600;
              line-height: 1;
              margin-bottom: 0;
              margin-left: 8px;
              margin-right: 8px;
              margin-top: 0;
              overflow-wrap: break-word;
              padding-bottom: 5px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 5px;
              white-space: nowrap;
              width: 40px;
              word-wrap: break-word;
            }
      >
        0
      </label>
    </div>
  </div>
</div>
`;

exports[`Slider renders range slider correctly 1`] = `
<div>
  <div
    class=
        ms-Slider
        ms-Slider-enabled
        ms-Slider-row
        {
          -moz-osx-font-smoothing: grayscale;
          -webkit-font-smoothing: antialiased;
          font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
          font-size: 14px;
          font-weight: 400;
          user-select: none;
        }
  >
    <label
      class=
          ms-Label
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            box-shadow: none;
            box-sizing: border-box;
            color: #323130;
            display: block;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 600;
            margin-bottom: 0px;
            margin-left: 0px;
            margin-right: 0px;
            margin-top: 0px;
            overflow-wrap: break-word;
            padding-bottom: 0px;
            padding-left: 0px;
            padding-right: 0px;
            padding-top: 0px;
            word-wrap: break-word;
          }
      for="Slider0"
    >
      I am a ranged slider
    </label>
    <div
      class=
          ms-Slider-container
          {
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
          }
    >
      <label
        class=
            ms-Label
            ms-Slider-value
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              display: block;
              flex-shrink: 1;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 600;
              line-height: 1;
              margin-bottom: 0;
              margin-left: 8px;
              margin-right: 8px;
              margin-top: 0;
              overflow-wrap: break-word;
              padding-bottom: 5px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 5px;
              white-space: nowrap;
              width: 40px;
              word-wrap: break-word;
            }
      >
        0
      </label>
      <div
        class=
            ms-Slider-slideBox
            ms-Slider-showValue
            ms-Slider-showTransitions
            {
              align-items: center;
              background: transparent;
              border: none;
              display: flex;
              flex-grow: 1;
              height: 28px;
              line-height: 28px;
              padding-bottom: 0;
              padding-left: 8px;
              padding-right: 8px;
              padding-top: 0;
              width: auto;
            }
            &:active .ms-Slider-active {
              background-color: #005a9e;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:active .ms-Slider-active {
              background-color: Highlight;
            }
            &:hover .ms-Slider-active {
              background-color: #0078d4;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Slider-active {
              background-color: Highlight;
            }
            &:active .ms-Slider-inactive {
              background-color: #8a8886;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:active .ms-Slider-inactive {
              border-color: Highlight;
            }
            &:hover .ms-Slider-inactive {
              background-color: #8a8886;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Slider-inactive {
              border-color: Highlight;
            }
            &:active .ms-Slider-thumb {
              border: 2px solid #005a9e;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:active .ms-Slider-thumb {
              border-color: Highlight;
            }
            &:hover .ms-Slider-thumb {
              border: 2px solid #005a9e;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Slider-thumb {
              border-color: Highlight;
            }
            &:active .ms-Slider-zeroTick {
              background-color: #deecf9;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:active .ms-Slider-zeroTick {
              background-color: Highlight;
            }
            &:hover .ms-Slider-zeroTick {
              background-color: #deecf9;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){&:hover .ms-Slider-zeroTick {
              background-color: Highlight;
            }
            @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
              forced-color-adjust: none;
            }
        id="Slider0"
      >
        <div
          class=
              ms-Slider-line
              {
                display: flex;
                position: relative;
                width: 100%;
              }
        >
          <span
            aria-disabled="false"
            aria-label="min I am a ranged slider"
            aria-valuemax="5"
            aria-valuemin="0"
            aria-valuenow="0"
            aria-valuetext="0"
            class=
                ms-Slider-thumb
                {
                  background: #ffffff;
                  border-color: #605e5c;
                  border-radius: 10px;
                  border-style: solid;
                  border-width: 2px;
                  box-sizing: border-box;
                  display: block;
                  height: 16px;
                  outline: transparent;
                  position: absolute;
                  top: -6px;
                  transform: translateX(-50%);
                  transition: left 0.367s cubic-bezier(.1,.9,.2,1);
                  width: 16px;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: -3px;
                  content: "";
                  left: -3px;
                  outline: 1px solid #605e5c;
                  position: absolute;
                  right: -3px;
                  top: -3px;
                  z-index: 1;
                }
            data-is-focusable="true"
            id="min-Slider0"
            role="slider"
            style="left: 0%;"
            tabindex="0"
          />
          <span
            aria-disabled="false"
            aria-label="max I am a ranged slider"
            aria-valuemax="10"
            aria-valuemin="0"
            aria-valuenow="5"
            aria-valuetext="5"
            class=
                ms-Slider-thumb
                {
                  background: #ffffff;
                  border-color: #605e5c;
                  border-radius: 10px;
                  border-style: solid;
                  border-width: 2px;
                  box-sizing: border-box;
                  display: block;
                  height: 16px;
                  outline: transparent;
                  position: absolute;
                  top: -6px;
                  transform: translateX(-50%);
                  transition: left 0.367s cubic-bezier(.1,.9,.2,1);
                  width: 16px;
                }
                &::-moz-focus-inner {
                  border: 0;
                }
                .ms-Fabric--isFocusVisible &:focus:after {
                  border: 1px solid #ffffff;
                  bottom: -3px;
                  content: "";
                  left: -3px;
                  outline: 1px solid #605e5c;
                  position: absolute;
                  right: -3px;
                  top: -3px;
                  z-index: 1;
                }
            data-is-focusable="true"
            id="max-Slider0"
            role="slider"
            style="left: 50%;"
            tabindex="0"
          />
          <span
            class=
                ms-Slider-inactive
                {
                  border-radius: 4px;
                  box-sizing: border-box;
                  height: 4px;
                  width: 100%;
                }
                {
                  background: #8a8886;
                  transition: width 0.367s cubic-bezier(.1,.9,.2,1);
                }
                @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                  border: 1px solid WindowText;
                }
            style="width: 0%;"
          />
          <span
            class=
                ms-Slider-active
                {
                  border-radius: 4px;
                  box-sizing: border-box;
                  height: 4px;
                  width: 100%;
                }
                {
                  background: #323130;
                  transition: width 0.367s cubic-bezier(.1,.9,.2,1);
                }
                @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                  background-color: WindowText;
                }
            style="width: 50%;"
          />
          <span
            class=
                ms-Slider-inactive
                {
                  border-radius: 4px;
                  box-sizing: border-box;
                  height: 4px;
                  width: 100%;
                }
                {
                  background: #8a8886;
                  transition: width 0.367s cubic-bezier(.1,.9,.2,1);
                }
                @media screen and (-ms-high-contrast: active), (forced-colors: active){& {
                  border: 1px solid WindowText;
                }
            style="width: 50%;"
          />
        </div>
      </div>
      <label
        class=
            ms-Label
            ms-Slider-value
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              box-shadow: none;
              box-sizing: border-box;
              color: #323130;
              display: block;
              flex-shrink: 1;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 600;
              line-height: 1;
              margin-bottom: 0;
              margin-left: 8px;
              margin-right: 8px;
              margin-top: 0;
              overflow-wrap: break-word;
              padding-bottom: 5px;
              padding-left: 0;
              padding-right: 0;
              padding-top: 5px;
              white-space: nowrap;
              width: 40px;
              word-wrap: break-word;
            }
      >
        5
      </label>
    </div>
  </div>
</div>
`;
